D3D12: Fix depth when rendering multiple 3D meshes

XMLWordPrintable

      When rendering multiple 3D meshes and using a Perspective Camera meshes are rendered incorrectly - they are rendered like 2D objects on top of each other instead of overlapping like being a part of the same 3D scene.

      See reproducer code and compare with D3D backend.

            Assignee:
            Lukasz Kostyra
            Reporter:
            Lukasz Kostyra
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: