8372346: D3D12: Fix depth when rendering multiple 3D meshes

JFX often follows a pattern of:
  - SetRenderTarget(RTT, depthTest = false)
  - SetRenderTarget(RTT, depthTest = true)
  - Draw()

Due to earlier adding an optimization to RenderingContext which
optimizes out setting the same RTT, the change in depthTest flag was not
properly reflected on D3D12 API.

This patch adds an extra faster path to "setting same RTT with Depth
enabled" scenario which readjusts PSO parameters and clears RTT applied
flag to re-set it after DSV was created.